--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Mirror repositories from a github account",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gotql": "^2.1.0-alpha1"
+    "gotql": "^2.1.0-alpha1",
+    "typescript": "^4.6.3"
   }
 }
