--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "gotql": "^2.1.0-alpha1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.5",
+    "tsyringe": "^4.6.0",
     "typescript": "^4.6.3"
   }
 }
