--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rimraf lib",
+    "prebuild": "npm run clean",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node index.js"
+    "start": "node lib/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +17,10 @@
     "gotql": "^2.1.0-alpha1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
-    "tsyringe": "^4.6.0",
+    "tsyringe": "^4.6.0"
+  },
+  "devDependencies": {
+    "rimraf": "^3.0.2",
     "typescript": "^4.6.3"
   }
 }
