--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "gotql": "^2.1.0-alpha1",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "typescript": "^4.6.3"
   }
 }
