--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   "dependencies": {
     "gotql": "^2.1.0-alpha1",
     "lodash": "^4.17.21",
+    "mkdirp": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
+    "simple-git": "^3.7.1",
     "tsyringe": "^4.6.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
+    "@types/mkdirp": "^1.0.2",
+    "@types/rimraf": "^3.0.2",
     "typescript": "^4.6.3"
   }
 }
