--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "simple-git": "^3.7.1",
-    "tsyringe": "^4.6.0"
+    "tsyringe": "^4.6.0",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
